Fixed the website on small devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@media (min-width: 481px) {
+@media (min-width: 0) {
     .gridcols {
         grid-template-columns: min-content 1fr;
     }
